Randomly applied new icons

--- a/app/views/agencies.html
+++ b/app/views/agencies.html
@@ -1,1 +1,31 @@
-<p>This is the agencies view.</p>
+<!-- masthead -->
+<div class="row-fluid">
+    <div id="page-title">
+        <img src="/images/icons/mast/1.png" alt="">&nbsp;
+        <h2>Agencies</h2>
+    </div>
+</div>
+<!-- masthead end -->
+
+<div class="row-fluid">
+    
+    <!-- Page Content  -->
+    <div class="span12">
+
+        <div class="headline"><h4>Lorem ipsum dolor.</h4></div>
+        <p><img class="thumbnail" src="images/portfolio/p5.jpg" align="right" alt=""> Sed at odio ut arcu fringilla dictum eu eu nisl. Donec rutrum erat non arcu gravida porttitor. Nunc magna nisi.Aliquam at erat in purus aliquet mollis. Fusce elementum velit vel dolor iaculis egestas. Maecenas ut nulla quis eros scelerisque posuere velatas.</p>
+        <p>Proin id condimentum sem. Morbi vitae dui in magna vestibulum suscipit vitae vel nunc. Integer ut risus nulla. malesuada tortor, nec scelerisque lorem mattis  lore Proin id condimentum sem. Morbi vitae dui in magna vestibulum suscipit vitae vel nunc. Integer ut risus nulla. malesuada tortor, nec scelerisque lorem mattis  lore Aliquam at erat in purus aliquet mollis. Fusce elementum velit vel dolor iaculis egestas nullam vitae neque luctus. Omassa risus eget arcu. Sed ac porta felis. Vivamus dignissim varius augue ut tempor. Proin urna diam ras venenatis, eros id congue pellent esque, risus leo. Proin urna diam ras venenatis, eros id congue pellent esque, risus leo.Donec quam felis, ultricies nec, pellentesque pretium quis, sem. Nulla consequat massa quis enim. Donec pe justo fringilla vel, aliquet nec vulputate eget, arcu enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felisa penelore mollis pretium. </p>
+        <br><br>
+        <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <small>Someone famous <cite title="Source Title">Source Title</cite></small>
+        </blockquote>
+
+        <p>Aliquam interdum vehicula nulla et aliquam. Integer ornare euismod risus, vitae tristique leo fringilla in. Maecenas id nunc risus, sit amet sollicitudin odio. Praesent condimentum auctor est, eu euismod magna lobortis sit amet. Duis venenatis ligula id turpis ultrices auctor. Pellentesque viverra neque nisl. Cras pellentesque elit ac libero varius sed mattis lectus consectetur. Nulla eget arcu sit amet mi dignissim ultrices vitae et magna. Etiam accumsan est a nulla placerat egestas. Donec urna enim, aliquet at sodales eu, ultrices sit amet nunc. Aenean convallis facilisis sem, id placerat diam vestibulum phasellus vitae scelerisque.</p>
+        <blockquote class="pull-right">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+        </blockquote>
+
+    </div>
+</div>
