--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,13 +1,7 @@
-<!-- Overrides -->
-<style>
-.bs-docs-example:after {
-    content: "Contact Form" !important;
-}
-</style>
-
 <!-- Content -->
 <div class="row-fluid">
     <div id="page-title">
+        <img src="/images/icons/mast/contact.png" alt="">&nbsp;
         <h2>Contact Us</h2>
     </div>
 </div>
@@ -29,13 +23,10 @@
 
                     <label>Comment</label>
                     <textarea rows="6" class="input-xxlarge"></textarea>
-
-
-
                 </fieldset>
 
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                  <button type="submit" class="btn btn-primary">Send Email</button>
                 </div>
             </form>
         </div>
