Initial send email implementation

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -12,7 +12,7 @@
     <div class="span8">
         <p>We want to hear from you! Just enter your name, email address, and message into the form below and send away.</p>
 
-        <div id="contact-form" >
+        <div id="contact-form" ng-submit="sendEmail()">
             <form>
                 <fieldset>
                     <label>Name</label>
